--- a/cupcake-page/index.html
+++ b/cupcake-page/index.html
@@ -5,18 +5,18 @@
   <title>Cupcake Mountain</title>
 </head>
 <body>
-  <img src="img/cupcake05.jpg">
+  <img style="margin:0px auto;display:block" src="img/cupcake05.jpg">
   <h1>Welcome... to Cupcake Mountain!</h1>
   <h2>Your premier combination rock climbing and cupcake emporium!</h2>
-  <p>Just take a look at these delicious geological configurations!</p>
-  <ul>
+  <p class="flashy">Just take a look at these delicious geological configurations!</p>
+  <ul class="secondbest">
     <li>Snowdrift Coconut</li>
     <img src="img/cupcake04.jpg">
     <li>The Backpacker</li>
     <img src="img/cupcake02.jpg">
     <li>The Pompei</li>
     <img src="img/cupcake03.jpg">
-    <li> And our masterpiece, the Mt. Cupcake!</li>
+    <li class="best"> And our masterpiece, the Mt. Cupcake!</li>
     <img src="img/cupcake01.jpg">
   </ul>
 </body>
